# xevd

./: CMakeLists.txt  COPYING  README.md
.github/workflows/: build.yml  prepare_packages.yml  release_packages.yml
app/: CMakeLists.txt  xevd_app.c  xevd_app_args.h  xevd_app_util.h
inc/: xevd.h
pkgconfig/: xevd.pc.in  xevdb.pc.in
src/: CMakeLists.txt  xevd.c  xevd_def.h  xevd_df.c  xevd_eco.c  xevd_picman.h  xevd_port.h  xevd_tbl.c  xevd_util.c  xevd_util.h
src/avx/: xevd_mc_avx.c
src_base/: CMakeLists.txt  xevd.c  xevd_bsr.c  xevd_bsr.h  xevd_def.h  xevd_df.c  xevd_df.h  xevd_eco.c  xevd_eco.h  xevd_ipred.c  xevd_ipred.h  xevd_itdq.c  xevd_itdq.h  xevd_mc.c  xevd_mc.h  xevd_picman.c  xevd_picman.h  xevd_port.c  xevd_port.h  xevd_recon.c  xevd_recon.h  xevd_tbl.c  xevd_tbl.h  xevd_thread_pool.c  xevd_thread_pool.h  xevd_tp.c  xevd_util.c  xevd_util.h
src_base/avx/: xevd_itdq_avx.c  xevd_itdq_avx.h  xevd_mc_avx.h  xevd_recon_avx.c  xevd_recon_avx.h
src_base/neon/: xevd_dbk_neon.c  xevd_dbk_neon.h  xevd_itdq_neon.c  xevd_itdq_neon.h  xevd_mc_neon.c  xevd_mc_neon.h  xevd_recon_neon.c  xevd_recon_neon.h
src_base/sse/: xevd_dbk_sse.c  xevd_dbk_sse.h  xevd_itdq_sse.c  xevd_itdq_sse.h  xevd_mc_sse.c  xevd_mc_sse.h  xevd_recon_sse.c  xevd_recon_sse.h
src_main/: CMakeLists.txt  xevdm.c  xevdm_alf.c  xevdm_alf.h  xevdm_def.h  xevdm_df.c  xevdm_df.h  xevdm_dra.c  xevdm_dra.h  xevdm_eco.c  xevdm_eco.h  xevdm_ipred.c  xevdm_ipred.h  xevdm_itdq.c  xevdm_itdq.h  xevdm_mc.c  xevdm_mc.h  xevdm_picman.c  xevdm_picman.h  xevdm_recon.c  xevdm_recon.h  xevdm_tbl.c  xevdm_tbl.h  xevdm_util.c  xevdm_util.h
src_main/avx/: xevdm_itdq_avx.c  xevdm_itdq_avx.h
src_main/neon/: xevdm_itdq_neon.c  xevdm_itdq_neon.h  xevdm_mc_neon.c  xevdm_mc_neon.h
src_main/sse/: xevdm_itdq_sse.c  xevdm_itdq_sse.h  xevdm_mc_sse.c  xevdm_mc_sse.h
